feat(workspaces): add unique workspace slugs
